remove the 15px left padding that is pushing the hero text to the right, causing the alignment issue with the rest of the content

--- a/sass/components/_Hero.scss
+++ b/sass/components/_Hero.scss
@@ -7,21 +7,21 @@
 */
 
 .Hero {
-  padding: 12% 3% 12% 15px;
+  padding: 12% 3% 12% 0;
   @media (min-width: 767px) {
-    padding: 15% 10% 9% 15px;
+    padding: 15% 10% 9% 0;
   }
   @media (min-width: 1600px) {
-    padding: 16% 3% 16% 15px;
+    padding: 16% 3% 16% 0;
   }
   @media (min-width: 1800px) {
-    padding: 18% 3% 18% 15px;
+    padding: 18% 3% 18% 0;
   }
   @media (min-width: 2000px) {
-    padding: 20% 3% 20% 15px;
+    padding: 20% 3% 20% 0;
   }
   @media (min-width: 2200px) {
-    padding: 21% 3% 21% 15px;
+    padding: 21% 3% 21% 0;
   }
 
   &__category {
